--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -16,7 +16,9 @@ jobs:
     steps:
       - id: check
         uses: kiesraad/cla-bot@5e9277c0a3dd71355fdc1af649635fc0f5906aaa # contributors-file-repository
-
+        with:
+          contributors-repository-owner: kiesraad
+          contributors-repository-name: abacus
       - if: failure() && steps.check.outputs.missing
         uses: marocchino/sticky-pull-request-comment@67d0dec7b07ed060a405f9b2a64b8ab319fdd7db # v2
         with:
